--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ section{
     gap: 8rem;
 }
 .about img{
-    width: 30vw;
+    width: 20vw;
     border-radius: 50%;
 }
 .info-box{
@@ -145,7 +145,7 @@ section{
 
 .typing-text span::before{
     content: "hacker";
-    background: linear-gradient(90deg, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+    background: linear-gradient(to right, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
     background-clip: text;
     color: transparent;
     animation: words 20s infinite;
@@ -173,4 +173,72 @@ section{
     76%, 100%{
         content: "Homelabber";
     }
+}
+
+.section-title{
+    text-align: center;
+    font-size: 4rem;
+    font-weight: 600;
+    margin-bottom: 3rem;
+}
+
+.experience-info{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5rem;
+}
+
+.experience img{
+    width: 24vw;
+    border-radius: 3rem;
+}
+
+.grid{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 2rem;
+}
+
+.grid-card{
+    border: 2px solid black;
+    border-radius: 3rem;
+    padding: 3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    justify-content: left;
+    cursor: pointer;
+    transition: 0.2s ease-in-out;
+}
+
+.grid-card:hover{
+    transform: scale(1.02);
+    background-color: black;
+    color: white;
+}
+
+.grid-card i{
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+.grid-card span{
+    font-size: 1.5rem;
+    font-weight: 500;
+    background: linear-gradient(to right, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+    background-clip: text;
+    color: transparent;
+}
+
+::-webkit-scrollbar{
+    width: 20px;
+}
+
+::-webkit-scrollbar-track{
+    background-color: rgb(219, 219, 219);
+}
+
+::-webkit-scrollbar-thumb{
+    background: linear-gradient(to bottom, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
 }
