--- a/style.css
+++ b/style.css
@@ -32,6 +32,10 @@ header{
     text-wrap: nowrap;
     transition: 0.3s ease-in-out;
 }
+.logo .highlight {
+  color: rgb(204, 161, 255);
+
+}
 .logo:hover{
     transform: scale(1.1);
 }
@@ -53,7 +57,7 @@ li a::before{
     top: 25px;
     border-radius: 1rem;
     transition: 0.3s ease-in-out;
-    background: linear-gradient(to right,rgb(204, 161, 255), rgb(147, 208, 255));
+    background: rgb(204, 161, 255);
 }
 li a:hover::before{
     width: 100%;
@@ -68,10 +72,10 @@ li a:hover::before{
     cursor: pointer;
     text-wrap: nowrap;
     transition: 0.3s ease-in-out;
-    background: linear-gradient(to right,rgb(204, 161, 255), rgb(147, 208, 255));
+    background: rgb(204, 161, 255);
 }
 .visit-btn:hover{
-    background: linear-gradient(to right,rgb(147, 208, 255),rgb(204, 161, 255));
+    background: rgb(204, 161, 255);
     transform: scale(1.03);
 }
 #menu-burger{
@@ -83,21 +87,26 @@ section{
     padding: 8rem 12%;
     width: 100%;
     position: relative;
+    background-color: #f2f2f2;
 }
 .about{
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: #f2f2f2;
 }
 .about .about-container{
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 8rem;
+    gap: 2rem;
 }
 .about img{
-    width: 24vw;
+    width: 22vw;
     border-radius: 50%;
+}
+.about .about-highlight{
+  color: rgb(204, 161, 255);
 }
 .info-box{
     display: flex;
@@ -115,11 +124,6 @@ section{
 .info-box h1{
     font-size: 4rem;
     font-weight: 600;
-}
-.info-box span{
-    background: black;
-    background-clip: text;
-    color: transparent;
 }
 .socials{
     display: flex;
@@ -160,9 +164,6 @@ section{
     white-space: nowrap;
     border-right: 2px solid rgb(204, 161, 255);
     width: 0ch;
-    background: linear-gradient(to right, rgb(204, 161, 255), rgb(147, 208, 255));
-    -webkit-background-clip: text;
-    color: transparent;
     animation: typewriter 6s steps(18) 1s infinite;
 }
 
@@ -193,6 +194,7 @@ section{
     border-radius: 3rem;
 }
 
+
 .grid{
     display: grid;
     grid-template-columns: repeat(2,1fr);
@@ -213,8 +215,8 @@ section{
 
 .grid-card:hover{
     transform: scale(1.02);
-    background-color: black;
-    color: white;
+    background-color: rgb(240, 229, 253);
+    color: rgb(0, 0, 0);
 }
 
 .grid-card i{
@@ -225,25 +227,24 @@ section{
 .grid-card span{
     font-size: 1.5rem;
     font-weight: 500;
-    background: linear-gradient(to right, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
-    background-clip: text;
-    color: transparent;
 }
-
-.achievements-info{
+.grid .date {
+  color: rgb(204, 161, 255); 
+}
+.certificates-info{
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 5rem;
 }
 
-.achievements-grid{
+.certificates-grid{
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
     gap: 2rem;
 }
 
-.achievements-card{
+.certificates-card{
     padding: 3rem 2rem;
     display: flex;
     flex-direction: column;
@@ -257,36 +258,34 @@ section{
     transition: 0.3s ease-in-out;
 }
 
-.achievements-card:hover{
+.certificates-card:hover{
     transform: scale(1.02);
-    background-color: black;
-    color: white;
+    background-color: rgb(240, 229, 253);
+    color: rgb(0, 0, 0);
 }
 
-.achievements-card i{
+.certificates-card i{
     font-size: 1.5rem;
     margin-bottom: 1rem;
 }
 
-.achievements-card span{
+.certificates-card span{
     font-size: 1.5rem;
     font-weight: 500;
-    background: linear-gradient(to right, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
-    background-clip: text;
-    color: transparent;
+    background: rgb(204, 161, 255);
 }
 
-.achievements img {
+.certificates img {
     align-items: center;
     margin-top: 15px;
     width: 10vw;
 }
 
-.achievements a{
+.certificates a{
     color:inherit
 }
 
-.achievements a:visited{
+.certificates a:visited{
     color: inherit;
 }
 
@@ -296,10 +295,6 @@ section{
 
 ::-webkit-scrollbar-track{
     background-color: rgb(219, 219, 219);
-}
-
-::-webkit-scrollbar-thumb{
-    background: linear-gradient(to bottom, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
 }
 
 @media(max-width:1280px){
@@ -334,7 +329,7 @@ section{
     .experience-info img{
         width: 70vw;
     }
-    .achievements img{
+    .certificates img{
         width: 25vw;
     }
 }
